buttons fixed on mobile devices

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,4 @@
+@import "tailwindcss";
 @theme {
   --color-brand-primary: #013047;
   --color-brand-teal: #0081a2;      
@@ -26,6 +27,11 @@
   *::after {
     box-sizing: border-box;
   }
+  html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
 
   body {
     @apply min-h-screen antialiased bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-50;
